[package]
name = "srml-consensus"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
substrate-primitives = { git = 'https://github.com/paritytech/substrate.git', rev = "3e8a5e0e", default-features = false }
inherents = { package = "substrate-inherents", git = 'https://github.com/paritytech/substrate.git', rev = "3e8a5e0e", default-features = false }
rstd = { package = "sr-std",git = 'https://github.com/paritytech/substrate.git', rev = "3e8a5e0e", default-features = false }
primitives = { package = "sr-primitives", git = 'https://github.com/paritytech/substrate.git', rev = "3e8a5e0e", default-features = false }
srml-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
system = { package = "srml-system", git = 'https://github.com/paritytech/substrate.git', rev = "3e8a5e0e", default-features = false }

[dev-dependencies]
runtime_io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"substrate-primitives/std",
	"rstd/std",
	"srml-support/std",
	"primitives/std",
	"system/std",
	"inherents/std",
]
