[package]
name = "srml-grandpa"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
substrate-primitives = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
substrate-finality-grandpa-primitives = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
rstd = { package = "sr-std", git = 'https://github.com/paritytech/substrate.git', default-features = false }
primitives = { package = "sr-primitives", git = 'https://github.com/paritytech/substrate.git', default-features = false }
srml-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
system = { package = "srml-system", git = 'https://github.com/paritytech/substrate.git', default-features = false }
session = { package = "srml-session", git = 'https://github.com/paritytech/substrate.git', default-features = false }
consensus = { package = "srml-consensus", path = '../consensus', default-features = false }
finality-tracker = { package = "srml-finality-tracker", path = "../finality-tracker", default-features = false }

[dev-dependencies]
runtime_io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"substrate-primitives/std",
	"substrate-finality-grandpa-primitives/std",
	"rstd/std",
	"srml-support/std",
	"primitives/std",
	"system/std",
	"consensus/std",
	"session/std",
	"finality-tracker/std",
]
